---------------------------------------------------------------------------------------------------
Version: 0.17.5
Date: 2019.10.30
  Add:
    - tiered bot recipe
	- harder module recipe
  Fix:
	- electronic to module recipe
---------------------------------------------------------------------------------------------------
Version: 0.17.4
Date: 2019.10.29
  Add:
	- add harder electronic recipe
  Change:
    - final tier transport belt now harder to craft
	- production science processor now easy to craft
---------------------------------------------------------------------------------------------------
Version: 0.17.3
Date: 2019.10.28
  Add:
	- add HD icons
	- add harder science pack recipe
---------------------------------------------------------------------------------------------------

Version: 0.17.2
Date: 2019.10.27
  Add:
	- add tiered recipe for crusher
	- add tiered recipe for furnace
  Change:
	- vial now use glass ingot
---------------------------------------------------------------------------------------------------

Version: 0.17.1
Date: 2019.10.27
  Init:
	- first release!
---------------------------------------------------------------------------------------------------