@@ -14,6 +14,7 @@ momo-harderEngine=Harder engine unit recipes
 momo-tieredComputer=Tiered computer recipes
 momo-harderElectronics=Harder electronics recipes [experimental] 
 momo-harderModule=Harder module recipes
+momo-increaseRubberUse=Increase rubber item use
 
 momo-removeLongInserter=Remove long inserter
 momo-moveUndergroundPipePack=Move underground pipe pack to Logistic group
